# ptrace_inject

./: .gitignore  CMakeLists.txt  LICENSE  README.md  decoy.c  get_func_addr.c  get_func_addr.h  hotpatchor.c  hotpatchor.h  main.c  main_c5.c  meson.build  multithread.c  test_elf.c
lib/hotpatchor/: hotpatchor.c  hotpatchor.h
rapport/: rapport_sel.tex
src/: CMakeLists.txt  c4.c  c5.c  decoy_c4.c  decoy_c5.c  test  test.s
src/hotpatchor/: hotpatchor.c  hotpatchor.h
src/inject_v1/: dummy_v1.c  injector_v1.c
src/inject_v2/: dummy_v2.c  injector_v2.c
src/test_asm/: movq_and_lock  movq_and_lock.s
src/test_elf/: CMakeLists.txt  test_elf.c
